# deepre

./: .env.sample  .gitignore  .mise.toml  README.md  pyproject.toml  run.py  rxconfig.py
deepre/: app_config.py  deepre.py  dto.py  mock_user.py  provider.py  query.py  researcher.py  state.py  utils.py
deepre/components/: general.py  responses_component.py  settings_component.py
deepre/models/: extend_ollama.py  ollama.py  providers_ollama.py
deepre/pages/: __init__.py  index.py
deepre/prompts/: __init__.py  message_models.py  message_template.py  templates.toml
deepre/tomls/: model_configs.toml  s.model_configs.toml
deepre/utils/: __init__.py  cache_util.py  cache_utils.py  console_tools.py  json_utils.py  logger.py  model_utils.py  timestamp.py  toml_utils.py
scripts/: README.md  extend-ollama.py  run-example.py  run.py  sapi-tool-calling.py
tests/: README.md  conftest.py  test_prompts.py  test_provider.py  test_query.py  test_search_results.py
tests/models/: test_provider.py
